# genui

./: CMakeLists.txt  LICENSE  README.md
markup/: CMakeLists.txt
markup/explorations/: exploration1.gui
markup/include/genui/markup/: lexer.hpp  object_model.hpp  parser.hpp  source_code.hpp  token.hpp
markup/src/: lexer.cpp  object_model.cpp  parser.cpp  source_code.cpp  token.cpp
markup/tests/: CMakeLists.txt
markup/tests/compilation_test/: CMakeLists.txt  main.cpp
markup/tests/lexer_test/: CMakeLists.txt  main.cpp
